5910 libnisdb won't build with modern GCC Reviewed by: Igor Kozhukhov <ikozhukhov@gmail.com> Reviewed by: "Toomas Soome" <tsoome@me.com> Approved by: Dan McDonald <danmcd@omniti.com>